Fix menu toggle sign on mobile
The fix fixes the appearance of the menu and the toggle sign on smaller
screens.

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -1,24 +1,30 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
 
-body{
+body{   
     margin: 0;
     padding: 0;
     font-family: 'Raleway', sans-serif;
     font-weight: 400;
     background-color: #FFF2F2;
+    /* background-image: url("../img/89328.jpg");
+    background-repeat: no-repeat; */
     padding-bottom: 40px;
 }
 
+nav .toggle{
+    display: block;
+    width:20%;
+    float: right;
+    margin-top: 10px;
+}
+
+.toggle div{
+    cursor: pointer;
+}
 
 @media screen and (min-width: 900px){
-    .toggle{
+    nav .toggle{
         display: none;
-    }
-    
-    header{
-        -webkit-box-shadow: 0px 2px 2px 0px rgba(136,136,136,1);
-        -moz-box-shadow: 0px 2px 2px 0px rgba(136,136,136,1);
-        box-shadow: 0px 2px 2px 0px rgba(136,136,136,1);
     }
 
     nav{
@@ -28,6 +34,8 @@ body{
         display: flex;
         flex-direction: row;
         justify-content: center;
+        box-shadow: 0 0 10px rgb(90, 90, 90);
+
     }
     
     nav a{
@@ -87,17 +95,16 @@ body{
         grid-template-columns: 30% 70%;
         margin: 20px 20%;
     }
-    .welcome{
+    /* .welcome{
         padding-top: 100px;
         padding-bottom: 100px;
-    }
+    } */
     
 }
 @media screen and (max-width: 900px){
     .nav-wrapper{
         display: none;
     }
-    
 
     nav{
         z-index: 990;
@@ -106,9 +113,8 @@ body{
         margin-top: -20px;
         padding:5px 10px 0 10px;
         background-color: #ffffff;
-        -webkit-box-shadow: 0px 2px 2px 0px rgba(136,136,136,1);
-        -moz-box-shadow: 0px 2px 2px 0px rgba(136,136,136,1);
-        box-shadow: 0px 2px 2px 0px rgba(136,136,136,1);
+        box-shadow: 0 0 10px rgb(90, 90, 90);
+
     }
 
     nav a{
@@ -126,15 +132,7 @@ body{
         float: left;
     }
     
-    .toggle{
-        width:20%;
-        float: right;
-        margin-top: 10px;
-    }
 
-    .toggle div{
-        cursor: pointer;
-    }
 
     i{
         
@@ -158,11 +156,11 @@ body{
         margin-top: 4px;
     }
 
-    .cross{
-        margin:0 25px 5px 15px;
+    /* .cross{
+        margin:0 25px 5px 15px; 
         padding: 0;
         transform: rotate(45deg);
-    }
+    } */
 
     .cross i {
         background: #000;
@@ -170,7 +168,7 @@ body{
     }
     
     .cross i:nth-child(1) {
-        transform: translateY(16px) rotate(180deg);
+        transform: translateY(12px) rotate(45deg);
     }
     
     .cross i:nth-child(2) {
@@ -178,7 +176,7 @@ body{
     }
     
     .cross i:nth-child(3) {
-        transform: translateY(6px) rotate(90deg);
+        transform:rotate(-45deg);
     }
 
     .responsive{
@@ -186,11 +184,11 @@ body{
         display:block;
     }
 
-    .responsive ul{
+    .nav-wrapper ul{
         list-style: none;
     }
 
-    .responsive li{
+    .nav-wrapper li{
         margin-bottom: 5px;
     }
 
@@ -254,16 +252,18 @@ body{
 }
 
 button{
-    margin-top: 5px;
     border:none;
     padding: 10px;
     font-size: 1.2rem;
-    margin-right: 10px; 
+    margin-right: 10px;
+    margin-top: 5px;
+    border: 1px #ffffff solid;
 }
 
 .button1{
     background-color: #BF3945;
     color: #fff;
+    transition: all .3s;
 }
 
 .button1:hover{
@@ -276,6 +276,7 @@ button{
 .button2{
     background-color: #8C1B39;
     color: #fff;
+    transition: all .3s;
 }
 
 .button2:hover{
